# alphabet_detector

./: Cargo.toml  README.md
alphabet_match_macro/: Cargo.toml
alphabet_match_macro/src/: lib.rs
alphabet_match_macro/tests/: test.rs
bench/: Cargo.toml
bench/benches/: benchmark.rs
macros/: Cargo.toml
macros/src/: alphabet_match.rs  helper.rs  language_derive.rs  lib.rs  script_derive.rs  script_lang_derive.rs
macros/tests/: test.rs
src/: ch_norm.rs  ch_norm_iter.rs  filter.rs  fulltext.rs  isocode.rs  langs_count.rs  langs_filter.rs  lib.rs  read_iter.rs  reader.rs  word_iter.rs  words.rs
src/lang/: alphabet.rs  alphabets.rs  language.rs  mod.rs  script.rs  script_language.rs  ucd.rs
src/lang/ucd/: mod.rs  preprocess.rs  ranges.rs  script.rs
tests/: count.rs  each_script_char_to_langs.rs  shared.rs  test_ch_norm.rs  test_ch_norm_iter.rs  test_fulltext.rs  test_fulltext_langs.rs  test_language.rs  test_script.rs  test_script_char_to_slangs.rs  test_script_chars.rs  test_script_language.rs  test_ucdscript.rs  test_word_iter.rs  test_word_langs.rs  test_words_langs.rs  test_words_sep.rs  text_langs.rs  text_to_words.rs  word_langs.rs
