[package]
name = "alphabet_detector"
version = "0.2.1"
authors = ["Dmitry Rodionov <gh@rdmtr.com>"]
description = "Natural language alphabet detection library"
documentation = "https://docs.rs/alphabet_detector/"
repository = "https://github.com/RoDmitry/alphabet_detector"
categories = ["text-processing"]
keywords = ["language", "alphabet", "detection", "word", "separator"]
exclude = [".github/*", "tests/*"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[profile.dev]
opt-level = 1

[lib]
name = "alphabet_detector"
path = "src/lib.rs"

[[bin]]
name = "cli_alphabet_intersection"
required-features = ["cli_alphabet_intersection"]

[workspace]
members = ["macros"]

[dependencies]
alphabet_match_macro = { path = "macros", version = "0.2" }
compact_str = "0.9"
concat_const = "0.1"
debug_unsafe = "0.1"
icu_normalizer = "2.0.0-beta2"
serde = { version = "1", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"

# cli_alphabet_intersection
clap = { version = "4", features = ["derive"], optional = true }
threadpool = { version = "1", optional = true }

# [target.'cfg(not(target_family = "wasm"))'.dependencies]
ahash = "0.8"

# [target.'cfg(target_family = "wasm")'.dependencies]
# ahash = { version = "0.8", default-features = false, features = ["std", "compile-time-rng"] }
# serde-wasm-bindgen = "0.6"
# wasm-bindgen = "0.2"

[dev-dependencies]
rstest = "0.25"
serde_json = "1"

# [target.'cfg(target_family = "wasm")'.dev-dependencies]
# wasm-bindgen-test = "0.3"

[features]
python = []
test_chars = []
files_read = []
cli_alphabet_intersection = ["files_read", "clap", "threadpool"]
