[package]
name = "alphabet_detector_benchmark"
version = "0.0.0"
authors = ["Dmitry Rodionov <gh@rdmtr.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
alphabet_detector = { path = ".." }
criterion = "0.7"

[[bench]]
name = "benchmark"
harness = false

[workspace]