[package]
name = "alphabet_detector_macros"
version = "0.4.0"
authors = ["Dmitry Rodionov <gh@rdmtr.com>"]
description = "Alphabet detector procedural macros"
repository = "https://github.com/RoDmitry/alphabet_detector"
include = ["src"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ahash = "0.8"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
