[package]
name = "alphabet_detector_macros"
version = "0.5.0"
authors = { workspace = true }
description = "Alphabet detector procedural macros"
repository = { workspace = true }
include = ["src"]
license = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
ahash = "0.8"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
